# edk2

./: .gitmodules  BldNetworkFv.bat  GitEdk2.bat
Application/ShellPkg/: ShellPkg.dsc
BaseTools/Conf/: build_rule.template  tools_def.template
BaseTools/Scripts/: DecList.py  ParseXml.py  (+2 more)
ContikiPkg/: ContikiPkg.dec  ContikiPkg.dsc  ContikiPkgNt32.dsc  readme.txt
CryptoPkg/: CryptoPkg.dec  CryptoPkg.dsc
DeviceSecurityPkg/: DeviceSecurityPkg.dec  DeviceSecurityPkg.dsc  readme.md
EmulatorPkg/: EmulatorPkg.dec  EmulatorPkg.dsc  EmulatorPkg.fdf
Ext2FsPkg/: Ext2FsPkg.dec  Ext2FsPkg.dsc  README.md
IntelFsp2WrapperPkg/: IntelFsp2WrapperPkg.dec  IntelFsp2WrapperPkg.dsc
MdeModulePkg/: MdeModulePkg.dec  MdeModulePkg.dsc
MdePkg/: MdePkg.dec
MemoryRangeCapsulePkg/: MemoryRangeCapsulePkg.dec  MemoryRangeCapsulePkg.dsc
MinOvmf64FwPkg/: MinOvmf64FwPkg.dsc  MinOvmf64FwPkg.fdf  MinOvmf64RustFwPkg.dsc  MinOvmf64RustFwPkg.fdf  bootx64.efi  payload-efi  payload-efi.efi  readme.md  zephyr_uefi_payload_ia32.elf
MinOvmf64FwPkg/RustSec/: Cargo.toml  RustSecMain.inf
MinOvmf64FwPkg/RustSec/src/: elf.rs  lib.rs  pcd.rs  pci.rs  sec.rs
NetworkPkg/: NetworkPkg.dsc  NetworkPkg.fdf
Nt32Pkg/: Nt32Pkg.dsc
OvmfPkg/: OvmfPkgIa32.dsc  OvmfPkgIa32.fdf  OvmfPkgIa32X64.dsc  OvmfPkgIa32X64.fdf  OvmfPkgX64.dsc  OvmfPkgX64.fdf
RustPkg/: Readme.md  RustPkg.dsc
SecurityPkg/: SecurityPkg.dec
StandaloneMmPkg/: StandaloneMmPkg.dec  StandaloneMmPkg.dsc
TinyBoot/: LICENSE  edksetup.bat  module_introduction.txt  quarkbuild.bat  readme.txt
UefiCpuPkg/: UefiCpuPkg.dec  UefiCpuPkg.dsc
(+1197 files in other folders)
